--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <img class="light" src="images/kodsnack-light.png" width="100%" />
-            <img class="dark" src="images/kodsnack-dark.png" width="100%" />
+            <img class="light" src="images/main-light.png" width="100%" />
+            <img class="dark" src="images/main-dark.png" width="100%" />
             <h1>Podcast Chapters</h1>
             <p class="lead">Want to make it easy for your listeners to tap directly through to sponsors? Skip over spoilers if they aren’t caught up? See what’s coming up in your episode? Let Podcast Chapters help.</p>
             <br>
@@ -25,8 +25,8 @@
                 <img src="images/download-on-mas.png" alt="Download on the Mac App Store" width="165px" height="40px" />
             </a></p>
             <br>
-            <p>Podcast Chapters is free for up to ten chapters. Try it out, use it for as many podcasts as you like. If you need more than ten chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.</p>
-            <!-- <p>Podcast Chapters is a nice old-fashioned one-time purchase in the Mac App Store. No in-app purchases, no strange freemium models. Oh, and pretty good support, if I dare say so myself.</p> -->
+            <!-- <p>Podcast Chapters is free for up to ten chapters. Try it out, use it for as many podcasts as you like. If you need more than ten chapters, or just enjoy the app and want to support it, unlocking unlimited chapters is a one-time in-app purchase.</p>-->
+            <p>Podcast Chapters is a nice old-fashioned one-time purchase in the Mac App Store. No in-app purchases, no strange freemium models. Oh, and pretty good support, if I dare say so myself.</p> 
         </div>
 
         <hr><br>
