--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,9 +30,27 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.3<small>Released May 4, 2021</small></h3>
+                <ul>
+                    <li>Spring colors! Alongside the trusty classic icon, you can try a brand new one. In no less than eight different color schemes</li></ul>
+                    <div style="text-align: center; height: 128px">
+                        <img src="../images/Blue.png" style="width: 128px; position: absolute; left: 128px"/>
+                        <img src="../images/Green.png" style="width: 128px; position: absolute; z-index: -1; left: 178px"/>
+                        <img src="../images/Red.png" style="width: 128px; position: absolute; z-index: -2; left: 228px"/>
+                        <img src="../images/Silver.png" style="width: 128px; position: absolute; z-index: -3; left: 278px"/>
+                        <img src="../images/Yellow.png" style="width: 128px; position: absolute; z-index: -4; left: 328px"/>
+                        <img src="../images/Orange.png" style="width: 128px; position: absolute; z-index: -5; left: 378px"/>
+                        <img src="../images/Purple.png" style="width: 128px; position: absolute; z-index: -6; left: 428px"/>
+                        <img src="../images/Devtool.png" style="width: 128px; position: absolute; z-index: -7; left: 478px"/>
+                    </div>
+                    <ul><li>Make waves! The playback bar has grown up and become a nice waveform of your podcast. Nicer to look at, more space for chapter markers, and a much larger area to click when you want to quickly jump to a different point in the episode</li>
+                    <li>Oh yes, and the app is back to being paid up front, without any in-app purchases. If you bought the in-app purchase, it will of course always give you the full version just as if you had bought up front. And if you use the free version, you can still use the in-app purchase to unlock the full version at any time.</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.2<small>Released April 18, 2021</small></h3>
                 <ul>
-                    <li>Bumped the number of chapters to ten in the free version, so that you can better try out the app before deciding whether to purchase or not.</li>
+                    <li>Bumped the number of chapters to ten in the free version, so that you can better try out the app before deciding whether to purchase or not</li>
                 </ul>
             </div>
             <div class="col-sm-12">
