Removed a full stop.

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -44,7 +44,7 @@
                         <img src="../images/Devtool.png" style="width: 128px; position: absolute; z-index: -7; left: 478px"/>
                     </div>
                     <ul><li>Make waves! The playback bar has grown up and become a nice waveform of your podcast. Nicer to look at, more space for chapter markers, and a much larger area to click when you want to quickly jump to a different point in the episode</li>
-                    <li>Oh yes, and the app is back to being paid up front, without any in-app purchases. If you bought the in-app purchase, it will of course always give you the full version just as if you had bought up front. And if you use the free version, you can still use the in-app purchase to unlock the full version at any time.</li>
+                    <li>Oh yes, and the app is back to being paid up front, without any in-app purchases. If you bought the in-app purchase, it will of course always give you the full version just as if you had bought up front. And if you use the free version, you can still use the in-app purchase to unlock the full version at any time</li>
                 </ul>
             </div>
             <div class="col-sm-12">
