Added some (okay, two) podcasts to the main page.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
         </div>
         <div class="row marketing cover-images">
             <div class="col-sm-4 col-xs-6">
+                <a target="_blank" href="https://martinbaileyphotography.com/blog/"><img src="images/mbppod.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="http://layout.fm"><img src="images/logo-layout.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6">
@@ -109,6 +112,9 @@
             </div>
             <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="http://www.openended.fm"><img src="images/logo-open-ended.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6">
+                <a target="_blank" href="https://www.kodsnack.se"><img src="images/kodsnack.png" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
                 <br>
