--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.3.1<small>Released May 18, 2021</small></h3>
+                <ul>
+                    <li>Fixed a bug which caused the app to be in limited chapters mode after purchasing. Big thanks to Niko Gasch for reporting the problem!</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.3<small>Released May 4, 2021</small></h3>
                 <ul>
                     <li>Spring colors! Alongside the trusty classic icon, you can try a brand new one. In no less than eight different color schemes</li></ul>
