Removed bug attribution by request.

--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -32,7 +32,7 @@
             <div class="col-sm-12">
                 <h3>Podcast Chapters 3.3.1<small>Released May 18, 2021</small></h3>
                 <ul>
-                    <li>Fixed a bug which caused the app to be in limited chapters mode after purchasing. Big thanks to Niko Gasch for reporting the problem!</li>
+                    <li>Fixed a bug which caused the app to be in limited chapters mode after purchasing.</li>
                 </ul>
             </div>
             <div class="col-sm-12">
