--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,14 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.4<small>Released June 6, 2021</small></h3>
+                <ul>
+                    <li>Added a warning when a chapter URL contains characters which can not be saved in the MP3 file. Click the error indicator to get a description of the problem. Podcast Chapters can also remove the disallowed characters. This will make the URL incorrect, but could be helpful for comparing with the original to see what caused the problem. Thanks once more to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for a great problem report</li>
+                    <li>The audio waveform should now appear somewhat more quickly on modern Macs</li>
+                    <li>If you nave not selected an app icon, Podcast Chapters will attempt to pick a color based on your system accent color</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.3.1<small>Released May 18, 2021</small></h3>
                 <ul>
                     <li>Fixed a bug which caused the app to be in limited chapters mode after purchasing.</li>
