--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,13 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.5<small>Released June 30, 2021</small></h3>
+                <ul>
+                    <li>If you add RSS data to your episode, it will now be exported to a file (named "tags.rss") when you export the podcast file itself</li>
+                    <li>Entered RSS data is now preserved if you close the RSS data window</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.4<small>Released June 6, 2021</small></h3>
                 <ul>
                     <li>Added a warning when a chapter URL contains characters which can not be saved in the MP3 file. Click the error indicator to get a description of the problem. Podcast Chapters can also remove the disallowed characters. This will make the URL incorrect, but could be helpful for comparing with the original to see what caused the problem. Thanks once more to <a href="https://twitter.com/tjluoma">TJ Luoma</a> for a great problem report</li>
