--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,13 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.6<small>Released July 30, 2021</small></h3>
+                <ul>
+                    <li>When setting a geo location for the location RSS tag, you can click the map pin button and pick the location using a map popover</li>
+                    <li>In the previous version, the "Save" button was incorrectly labeled "Open" when saving both the podcast and rss tags at the same time</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.5<small>Released June 30, 2021</small></h3>
                 <ul>
                     <li>If you add RSS data to your episode, it will now be exported to a file (named "tags.rss") when you export the podcast file itself</li>
