--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.7<small>Released August 10, 2021</small></h3>
+                <ul>
+                    <li>Podcast Chapters now automatically saves the list of people you use in Podcasting 2.0 RSS tags, making it a breeze to add recurring participants. Pick a person from the list and hit the plus button to add them, or select "New Person" and hit plus to add a, yes, new participant</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.6<small>Released July 30, 2021</small></h3>
                 <ul>
                     <li>When setting a geo location for the location RSS tag, you can click the map pin button and pick the location using a map popover</li>
