--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 3.9<small>Released March 15, 2022</small></h3>
+                <ul>
+                    <li>Fixed a crash when opening files with comments which were emptier than empty. Thanks to <a href="https://twitter.com/jmortizsilva">Jose María Ortiz</a> for reporting the problem! (The version number jumped one step more than intended because of … winter fog in my brain, I guess?)</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.7<small>Released August 10, 2021</small></h3>
                 <ul>
                     <li>Podcast Chapters now automatically saves the list of people you use in Podcasting 2.0 RSS tags, making it a breeze to add recurring participants. Pick a person from the list and hit the plus button to add them, or select "New Person" and hit plus to add a, yes, new participant</li>
