--- a/support/id3-version/index.html
+++ b/support/id3-version/index.html
@@ -18,7 +18,7 @@
         <div class="row marketing">
             <div class="col-xs-12" style="text-align: center;">
                 <h1>Podcast Chapters Support</h1>
-                <p><a href="../index.html">← Return to Podcast Chapters</a></p>
+                <p><a href="../../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
         <div class="row marketing">
