--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.0<small>Released April 15, 2022</small></h3>
+                <ul>
+                    <li>Fixed a crash when trying to import chapters from a CSV containing time markers only, i.e. no titles or other information. Or, if you prefer to look on the bright side: added support for importing chapter time markers from CSV files containing no other information</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 3.9<small>Released March 15, 2022</small></h3>
                 <ul>
                     <li>Fixed a crash when opening files with comments which were emptier than empty. Thanks to <a href="https://twitter.com/jmortizsilva">Jose María Ortiz</a> for reporting the problem! (The version number jumped one step more than intended because of … winter fog in my brain, I guess?)</li>
