--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,13 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.1<small>Released January 15, 2023</small></h3>
+                <ul>
+                    <li>Data preservation. If you quit Podcast Chapters without exporting your podcast first, all text information (i.e. everything but images) will automatically be saved and restored the next time the app opens. When you open a mp3 file, you get to choose whether to keep the saved information, or replace it with the information in the file. Please note that this will most likely not help in the case of a crash, but I have some ideas to explore around that as well</li>
+                    <li>Slightly improved the look of the episode description text field</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 4.0<small>Released April 15, 2022</small></h3>
                 <ul>
                     <li>Fixed a crash when trying to import chapters from a CSV containing time markers only, i.e. no titles or other information. Or, if you prefer to look on the bright side: added support for importing chapter time markers from CSV files containing no other information</li>
