--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.2<small>Released January 17, 2023</small></h3>
+                <ul>
+                    <li>Fixed a really silly bug which made nothing happen when you tried to open a mp3 for editing. A good reminder to make releases more often, it is much easier to miss things when you do something too seldom</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 4.1<small>Released January 15, 2023</small></h3>
                 <ul>
                     <li>Data preservation. If you quit Podcast Chapters without exporting your podcast first, all text information (i.e. everything but images) will automatically be saved and restored the next time the app opens. When you open a mp3 file, you get to choose whether to keep the saved information, or replace it with the information in the file. Please note that this will most likely not help in the case of a crash, but I have some ideas to explore around that as well</li>
