--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,12 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.3<small>Released March 18, 2023</small></h3>
+                <ul>
+                    <li>Fixed an issue with comment frames, where the text "chapAppDesc" would get added to your comment. Most people would never run into this situation, but those who had the right workflow would unfortunately see it all the time</li>
+                </ul>
+            </div>
+            <div class="col-sm-12">
                 <h3>Podcast Chapters 4.2<small>Released January 17, 2023</small></h3>
                 <ul>
                     <li>Fixed a really silly bug which made nothing happen when you tried to open a mp3 for editing. A good reminder to make releases more often, it is much easier to miss things when you do something too seldom</li>
