--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,10 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.4<small>Released March 20, 2023</small></h3>
+                <ul>
+                    <li>Fixed an issue where the app could crash upon export if the file contained comments before it was edited by Podcast Chapters</li>
+                </ul>
                 <h3>Podcast Chapters 4.3<small>Released March 18, 2023</small></h3>
                 <ul>
                     <li>Fixed an issue with comment frames, where the text "chapAppDesc" would get added to your comment. Most people would never run into this situation, but those who had the right workflow would unfortunately see it all the time</li>
