--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                 <a target="_blank" href="http://www.openended.fm"><img src="images/logo-open-ended.jpg" alt="" width="100%"/></a>
             </div>
             <div class="col-sm-4 col-xs-6">
+                <a target="_blank" href="https://www.futureofpodcasting.net"><img src="images/logo-future.jpg" alt="" width="100%"/></a>
+            </div>
+            <div class="col-sm-4 col-xs-6">
                 <a target="_blank" href="https://www.kodsnack.se"><img src="images/kodsnack.png" alt="" width="100%"/></a>
             </div>
             <div class="col-xs-12">
