--- a/faq/pc20.html
+++ b/faq/pc20.html
@@ -21,7 +21,7 @@
                 <br><br>
             </div>
             <div class="col-xs-12">
-                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://twitter.com/bjoreman">Twitter</a> and I'll be sure to help you out.</p>
+                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://toot.cafe/@bjoreman">Mastodon</a> and I'll be sure to help you out.</p>
                 <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
@@ -30,7 +30,7 @@
             <div class="col-sm-12">
                 <h3>What is this all about?</h3>
                 <p>Podcast Chapters 3.0 can generate RSS tags for the <a href="https://github.com/Podcastindex-org/podcast-namespace/blob/main/docs/1.0.md">podcast namespace</a>. If your podcast hosting solution doesn't yet support these tags, but does allow you to add tags to your RSS feed, you can create the tags straight from Podcast Chapters.</p>
-                <p>This is the very first version. If this is useful to you, I have many ideas for making things even better and more integrated with the rest of the app in the future. For example: specifying multiple soundbites, finer adjustment of soundbites, saving and re-use of all information. <a href="https://twitter.com/bjoreman">Get in touch</a> and tell me what you like or would like to see changed!</p>
+                <p>This is the very first version. If this is useful to you, I have many ideas for making things even better and more integrated with the rest of the app in the future. For example: specifying multiple soundbites, finer adjustment of soundbites, saving and re-use of all information. <a href="https://toot.cafe/@bjoreman">Get in touch</a> and tell me what you like or would like to see changed!</p>
             </div>
             <div class="col-sm-12">
                 <h3>How does it work?</h3>
