--- a/faq/index.html
+++ b/faq/index.html
@@ -21,7 +21,7 @@
                 <br><br>
             </div>
             <div class="col-xs-12">
-                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://twitter.com/bjoreman">Twitter</a> and I'll be sure to help you out.</p>
+                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://toot.cafe/@bjoreman">Mastodon</a> and I'll be sure to help you out.</p>
                 <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <div class="col-sm-12">
                 <h3>I have another question that's not answered here.</h3>
                 <p>First of all, that's not a question, it's a statement.</p>
-                <p>The best place to ask a question is on Twitter (<a href="https://twitter.com/bjoreman">@bjoreman</a>), my DMs are open.</p>
+                <p>The best place to ask a question is on Mastodon (<a href="https://toot.cafe/@bjoreman">@bjoreman</a>), my DMs are open.</p>
             </div>
         </div>
     </div>
