--- a/faq/jsonExport.html
+++ b/faq/jsonExport.html
@@ -21,7 +21,7 @@
                 <br><br>
             </div>
             <div class="col-xs-12">
-                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://twitter.com/bjoreman">Twitter</a> and I'll be sure to help you out.</p>
+                <p>Thanks for your interest in Podcast Chapters. If your question isn't answered in this FAQ, feel free to reach out to me on <a href="https://toot.cafe/@bjoreman">Mastodon</a> and I'll be sure to help you out.</p>
                 <p><a href="../index.html">← Return to Podcast Chapters</a></p>
             </div>
         </div>
