--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="col-xs-12">
                 <br>
                 <p style="text-align: center; color: #6e6e6e;">
-                    Use and love Podcast Chapters? Want your podcast here? <a href="https://twitter.com/bjoreman">Let me know.</a>
+                    Use and love Podcast Chapters? Want your podcast here? <a href="https://toot.cafe/@bjoreman">Let me know.</a>
                 </p>
             </div>
         </div>
@@ -130,8 +130,8 @@
         <br><hr>
 
         <footer class="footer">
-            <p>&copy; 2023 <a href="https://bjoreman.com">Fredrik Björeman</a></p>
-            <p><a href="https://twitter.com/bjoreman">@bjoreman</a></p>
+            <p>&copy; 2024 <a href="https://bjoreman.com">Fredrik Björeman</a></p>
+            <p><a href="https://toot.cafe/@bjoreman">@bjoreman</a></p>
             <p><a href="faq/index.html">Frequently Asked Questions</a></p>
             <p><a href="release-notes/index.html">Release Notes</a></p>
         </footer>
