--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -30,6 +30,10 @@
         <hr>
          <div class="row marketing">
             <div class="col-sm-12">
+                <h3>Podcast Chapters 4.6<small>Released March 7, 2024</small></h3>
+                <ul>
+                    <li>Fixed an issue where the app could crash upon export if the file contained comments before it was edited by Podcast Chapters. (Yes, the same thing 4.4 fixed. The fix got lost in the release process for 4.5 🤦🏻‍♂️) Thanks to <a href="https://www.linkedin.com/in/tillvonreumont/?originalSubdomain=de">Till A. von Reumont</a> for reporting the problem!</li>
+                </ul>
                 <h3>Podcast Chapters 4.5<small>Released March 3, 2024</small></h3>
                 <ul>
                     <li>Fixed an issue which caused the player web page (the one you can get if you export to JSON) to not switch chapter art. Thanks to <a href="http://www.moritzmetz.de">Moritz Metz</a> for reporting the problem!</li>
